--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
         <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username...">
     </div>
     <br>
-    
-    <div id="profile">
+
+    <section id="profile">
         <!-- JAVASCRIPT INSERT -->
-    </div>
+    </section>
     
+    <section id="repos">
+        <!-- JAVASCRIPT INSERT -->
+    </section>
+
     <footer class="mt-5 p-3 text-center bg-light fixed-bottom">
         RepoFinder &copy;
     </footer>
