rendered and formatted repo elements under profile section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <title>RepoFinder</title>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <style>
+    a:hover {
+        background-color: #f3f3f3;
+    }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-primary mb-3">
@@ -18,11 +23,11 @@
     </div>
     <br>
 
-    <section id="profile">
+    <section id="profile" class="container">
         <!-- JAVASCRIPT INSERT -->
     </section>
     
-    <section id="repos">
+    <section id="repos" class="container" style="margin-bottom: 6rem;">
         <!-- JAVASCRIPT INSERT -->
     </section>
 
